[gd_scene load_steps=21 format=2]

[ext_resource path="res://Image/Clouds.png" type="Texture" id=1]
[ext_resource path="res://Object/DWorld/Collision/Collision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Object/Actor/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Theme/HUD/HUD.tres" type="Theme" id=4]
[ext_resource path="res://Object/Main/Main.gd" type="Script" id=5]
[ext_resource path="res://Object/DWorld/IncomingSpawn/IncomingSpawn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Object/DWorld/HUD/HUD.gd" type="Script" id=7]
[ext_resource path="res://Object/Main/Background.gd" type="Script" id=8]
[ext_resource path="res://Theme/Main/Main.tres" type="Theme" id=9]
[ext_resource path="res://Object/OnLoad/Globals.tscn" type="PackedScene" id=10]
[ext_resource path="res://Shader/ScrollingMat.tres" type="Material" id=11]
[ext_resource path="res://Shader/ScrollingMatReverse.tres" type="Material" id=12]
[ext_resource path="res://Sound/PressOut.wav" type="AudioStream" id=13]
[ext_resource path="res://Object/UI/DButton/DButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://Shader/DButton.shader" type="Shader" id=15]
[ext_resource path="res://Shader/SkyMat.tres" type="Material" id=16]





[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 347.933 )

[sub_resource type="Animation" id=2]
length = 180.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Color:material:shader_param/color1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 60, 120, 180 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.6, 0.89, 0.98 ), Vector3( 0.22, 0.36, 0.58 ), Vector3( 0, 0.05, 0.06 ), Vector3( 0.6, 0.89, 0.98 ) ]
}

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 15 )
shader_param/node_size = Vector2( 200, 60 )
shader_param/radius = 0.25
shader_param/mouse_pos = Vector2( 0.5, 0.5 )
shader_param/circle_alpha = 1.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 15 )
shader_param/node_size = Vector2( 200, 60 )
shader_param/radius = 0.25
shader_param/mouse_pos = Vector2( 0.5, 0.5 )
shader_param/circle_alpha = 1.0

[node name="Main" type="Node2D" groups=[
"GameOver",
"Score",
]]
script = ExtResource( 5 )

[node name="Collision" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.305882 )
z_index = -1

[node name="CollisionBottom" parent="Collision" instance=ExtResource( 2 )]
position = Vector2( 200, 800 )

[node name="CollisionTop" parent="Collision" instance=ExtResource( 2 )]
position = Vector2( 250.449, -200.66 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -0.0431595 )
anchor_mode = 0
current = true

[node name="DestroyLine" type="Area2D" parent="."]
position = Vector2( -50, 266.549 )
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyLine"]
shape = SubResource( 1 )

[node name="ScoreLine" type="Area2D" parent="."]
position = Vector2( 67, 266.549 )
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLine"]
position = Vector2( -65.9265, -1.78174 )
shape = SubResource( 1 )

[node name="EnemySpawn" parent="." instance=ExtResource( 6 )]

[node name="Background" type="CanvasLayer" parent="." groups=[
"PlayerDeath",
]]
layer = -1
script = ExtResource( 8 )

[node name="Color" type="ColorRect" parent="Background"]
material = ExtResource( 16 )
margin_right = 400.0
margin_bottom = 600.0
color = Color( 0.596078, 0.886275, 0.976471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundAnimation" type="AnimationPlayer" parent="Background"]
anims/Background = SubResource( 2 )

[node name="Clouds" type="Node2D" parent="Background"]
modulate = Color( 1, 1, 1, 0.588235 )

[node name="Clouds2" type="Sprite" parent="Background/Clouds"]
material = ExtResource( 12 )
position = Vector2( 200, 627.008 )
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 400, 250 )

[node name="Clouds" type="Sprite" parent="Background/Clouds"]
material = ExtResource( 11 )
position = Vector2( 200, 666.652 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 400, 250 )

[node name="Clouds3" type="Sprite" parent="Background/Clouds"]
material = ExtResource( 12 )
position = Vector2( 200, 93.03 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2( 0, 0, 400, 250 )

[node name="Clouds4" type="Sprite" parent="Background/Clouds"]
material = ExtResource( 11 )
position = Vector2( 200, 60.938 )
texture = ExtResource( 1 )
flip_v = true
region_enabled = true
region_rect = Rect2( 0, 0, 400, 250 )

[node name="HUDLayer" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="HUDLayer"]
margin_top = -0.0431595
margin_right = 400.0
margin_bottom = 79.9568
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="HUDLayer" groups=[
"GameOver",
"Score",
]]
margin_top = -0.0431595
margin_right = 400.0
margin_bottom = 79.9568
theme = ExtResource( 4 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUDLayer/HUD"]
margin_left = 5.0
margin_right = 38.0
margin_bottom = 88.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="HUDLayer/HUD"]
margin_left = 250.0
margin_right = 396.0
margin_bottom = 88.0
text = "00:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 37.418, 261.957 )

[node name="ResultsLayer" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Results" type="PanelContainer" parent="ResultsLayer"]
self_modulate = Color( 1, 1, 1, 0.388235 )
margin_top = 80.0
margin_right = 400.0
margin_bottom = 520.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="ResultsLayer/Results"]
margin_left = 2.0
margin_top = 2.0
margin_right = 398.0
margin_bottom = 438.0
color = Color( 0, 0, 0, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="ResultsLayer/Results"]
margin_left = 2.0
margin_top = 2.0
margin_right = 398.0
margin_bottom = 438.0
alignment = 1

[node name="Restart" parent="ResultsLayer/Results/VBoxContainer" instance=ExtResource( 14 )]
material = SubResource( 3 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 396.0
margin_bottom = 216.0
size_flags_vertical = 3
text = "Restart"
press_up_sound = ExtResource( 13 )

[node name="MainMenu" parent="ResultsLayer/Results/VBoxContainer" instance=ExtResource( 14 )]
material = SubResource( 4 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 396.0
margin_bottom = 436.0
size_flags_vertical = 3
text = "Main Menu"
press_up_sound = ExtResource( 13 )

[node name="Globals" parent="ResultsLayer" instance=ExtResource( 10 )]
margin_top = 520.0
margin_right = 400.0
margin_bottom = 600.0
[connection signal="body_exited" from="DestroyLine" to="." method="_on_DestroyLine_body_exited"]
[connection signal="body_exited" from="ScoreLine" to="." method="_PlayerLine_body_exited"]
[connection signal="pressed" from="ResultsLayer/Results/VBoxContainer/Restart" to="." method="restart"]
[connection signal="pressed" from="ResultsLayer/Results/VBoxContainer/MainMenu" to="." method="goto_mainmenu"]
